syntax = "proto3";
package aproto;

import "base.proto";

message NetInAmountDetail {
  double amount = 1;
  double percentage = 2;
}

message RealtimeMoneyTrendItem {
  Symbol symbol = 1;
  string name = 2;
  double price = 3;
  double updown_percentage = 4;
  int64 time = 6;
  // 主力净流入
  NetInAmountDetail super_super_big_order = 7;
  // 超大单净流入
  NetInAmountDetail super_big_order = 8;
  // 大单净流入
  NetInAmountDetail big_order = 9;
  // 中单净流入
  NetInAmountDetail middle_order = 10;
  // 小单净流入
  NetInAmountDetail small_order = 11;
}

message RealtimeMoneyTrendItemList {
  repeated RealtimeMoneyTrendItem list = 1;
}